# PersonalizationMCP

./: .gitignore  CONFIG_SETUP_GUIDE.md  LICENSE  README.md  README_zh.md  cli.py  config.example  pyproject.toml  requirements.txt  server.py
services/: __init__.py  bilibili_service.py  config_store.py  reddit_service.py  spotify_service.py  status_service.py  steam_service.py  youtube_service.py
skills/personalhub-bilibili/: SKILL.md
skills/personalhub-manager/: SKILL.md
skills/personalhub-onboarding/: SKILL.md
skills/personalhub-reddit/: SKILL.md
skills/personalhub-spotify/: SKILL.md
skills/personalhub-status/: SKILL.md
skills/personalhub-steam/: SKILL.md
skills/personalhub-youtube/: SKILL.md
